--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -60,7 +60,7 @@ body {
     overflow: hidden;
 }
 
-.blog-img img, .blog-gif img, .blog-video iframe, .youtube-video iframe {
+.blog-img img, .blog-gif img, .blog-video iframe, .youtube-video iframe, .captured-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
